--- a/shop/src/index.css
+++ b/shop/src/index.css
@@ -38,6 +38,16 @@ header ul.nav li:hover{
   opacity: 0.5;
 }
 
+header .shop-cart-button{
+  float: right;
+  cursor: pointer;
+  transition: color 500ms ease;
+}
+
+header .shop-cart-button:hover{
+  color: #dc3d3d;
+}
+
 header .presentation{
   margin: 50px 0;
   background: url('./img/bg.jpg') no-repeat;
