--- a/shop/src/index.css
+++ b/shop/src/index.css
@@ -59,11 +59,42 @@ header .shop-cart{
   top: 30px;
   right: 0;
   width: 450px;
-  min-height: 100px;
   background: #fafafa;
   -webkit-box-shadow: 6px 9px 9px 1px rgba(96,96,96,0.45); 
   box-shadow: 6px 9px 9px 1px rgba(96,96,96,0.45);
   z-index: 1;
+  padding: 20px;
+}
+
+header .shop-cart:last-child{
+  padding-bottom: 0;
+}
+
+header .shop-cart .empty h2{
+  font-size: 20px;
+  margin-bottom: 20px;
+}
+
+header .shop-cart .item{
+  width: 100%;
+  float: left;
+  margin-bottom: 20px;
+}
+
+header .shop-cart .item img{
+  width: 70px;
+  float: left;
+  margin-right: 20px;
+}
+
+header .shop-cart .item h2{
+  font-size: 20px;
+  margin-bottom: 10px;
+}
+
+header .shop-cart .item p{
+  font-weight: 600;
+  color: #797979;
 }
 
 header .presentation{
