--- a/react-app/src/components/JournalAddButton/JournalAddButton.css
+++ b/react-app/src/components/JournalAddButton/JournalAddButton.css
@@ -1,4 +1,11 @@
 .jouranl-add{
   padding: 10px;
-  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 20.11px;
+  text-align: left;
 }
