--- a/react-app/src/components/Input/Input.module.css
+++ b/react-app/src/components/Input/Input.module.css
@@ -1,23 +1,4 @@
-.journal-form{
-  display: flex;
-  flex-direction: column;
-  gap: 30px;
-}
-
-.form-label{
-  display: flex;
-  align-items: center;
-  gap: 20px;
-  min-width: 150px;
-}
-
-.form-row{
-  display: flex;
-  align-items: center;
-  gap: 50px;
-}
-
-.input{
+.input {
   border: none;
   background: none;
   font-size: 14px;
@@ -27,6 +8,10 @@
   font-family: 'Source Sans 3', sans-serif;
   border-bottom: 1px solid rgb(43, 43, 43);
   width: 100%;
+}
+
+.input-title {
+  font-size: 32px;
 }
 
 .invalid {
