final project. deleting records

--- a/react-app/src/components/JournalForm/JournalForm.module.css
+++ b/react-app/src/components/JournalForm/JournalForm.module.css
@@ -33,3 +33,16 @@
   border: 1px solid red;
   background: rgb(68, 6, 6);
 }
+
+.delete{
+  border: none;
+  background: none;
+  cursor: pointer;
+  height: 30px;
+  width: 30px;
+}
+
+.delete:hover{
+  background: rgb(255, 255, 255, 0.05);
+  border-radius: 50%;
+}
