--- a/pizza-app/src/components/ProductCard/ProductCard.module.css
+++ b/pizza-app/src/components/ProductCard/ProductCard.module.css
@@ -1,4 +1,86 @@
 .head{
   position: relative;
-  
+  min-height: 165px;
+  border-radius: 19px;
+}
+
+.card{
+  background: var(--white-color);
+  border-radius: 19px;
+  box-shadow: 18.21px 18.21px 36.43px 0px #D3D1D840;
+  width: 320px;
+}
+
+.footer{
+  padding: 12px;
+}
+
+.title{
+  color: var(--text-color);
+  font-size: 18.21px;
+  font-weight: 600;
+  line-height: 24.8px;
+  text-align: left;
+}
+
+.description{
+  color: var(--text-secondary-color);
+  font-size: 14.57px;
+  font-weight: 400;
+  line-height: 19.84px;
+  text-align: left;
+}
+
+.link{
+  text-decoration: none;
+}
+
+.price{
+  position: absolute;
+  top: 15px;
+  left: 15px;
+  background: var(--white-color);
+  padding: 3px 10px;
+  border-radius: 20px;
+  color: #111719;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 27.24px;
+  text-align: left;
+}
+
+.currency{
+  color: var(--primary-color);
+}
+
+.rating{
+  position: absolute;
+  bottom: -12px;
+  left: 15px;
+  background: var(--white-color);
+  padding: 3px 8px;
+  border-radius: 20px;
+  color: #111719;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 27.24px;
+  text-align: left;
+  box-shadow: 0px 6.07px 24.29px 0px #FE724C33;
+}
+
+.add-to-cart{
+  position: absolute;
+  top: 15px;
+  right: 15px;
+  background: var(--primary-color);
+  border-radius: 50%;
+  width: 34px;
+  height: 34px;
+  border: none;
+  cursor: pointer;
+  transition: background-color 0.2s ease-in-out;
+}
+
+.add-to-cart:hover{
+  background: var(--primary-hover-color);
 }
